--- a/MachineLearning/reader.ipynb
+++ b/MachineLearning/reader.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/its/home/drs25/miniconda3/lib/python3.10/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd \n"
+    "import pandas as pd "
    ]
   },
   {
@@ -18,7 +27,113 @@
     "## Machine Learning and Data Processing Worksheet \n",
     "Once you have gathered your datasets you can import them into this work sheet. This work sheet will help you load a dataset, look at your data and train models on it. As there are some quite challenging concepts, some of the code is written for you. Fill in where you can, and try understand what is happening. Can you increase model accuracy? \n",
     "\n",
-    "### Load in the data"
+    "### Load in the data\n",
+    "\n",
+    "First we load in the data, this is the chode you need to do it, then you can view the data with ```df.head()``` showning the top 5 in the table. df can be called anything, it is just the variable name. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ax</th>\n",
+       "      <th>ay</th>\n",
+       "      <th>az</th>\n",
+       "      <th>gx</th>\n",
+       "      <th>gy</th>\n",
+       "      <th>gz</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.198719</td>\n",
+       "      <td>-0.169988</td>\n",
+       "      <td>9.26316</td>\n",
+       "      <td>-0.030910</td>\n",
+       "      <td>-0.015455</td>\n",
+       "      <td>-0.012391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.148440</td>\n",
+       "      <td>-0.114922</td>\n",
+       "      <td>9.25598</td>\n",
+       "      <td>-0.032508</td>\n",
+       "      <td>-0.016254</td>\n",
+       "      <td>-0.013456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.773327</td>\n",
+       "      <td>1.838750</td>\n",
+       "      <td>7.98945</td>\n",
+       "      <td>1.339770</td>\n",
+       "      <td>-0.798188</td>\n",
+       "      <td>0.206908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.272939</td>\n",
+       "      <td>-0.895431</td>\n",
+       "      <td>9.64145</td>\n",
+       "      <td>-1.386000</td>\n",
+       "      <td>0.313893</td>\n",
+       "      <td>-0.157080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-1.103730</td>\n",
+       "      <td>-1.403000</td>\n",
+       "      <td>9.33738</td>\n",
+       "      <td>1.486990</td>\n",
+       "      <td>-0.177597</td>\n",
+       "      <td>-0.002132</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ax        ay       az        gx        gy        gz\n",
+       "0 -0.198719 -0.169988  9.26316 -0.030910 -0.015455 -0.012391\n",
+       "1 -0.148440 -0.114922  9.25598 -0.032508 -0.016254 -0.013456\n",
+       "2 -0.773327  1.838750  7.98945  1.339770 -0.798188  0.206908\n",
+       "3  0.272939 -0.895431  9.64145 -1.386000  0.313893 -0.157080\n",
+       "4 -1.103730 -1.403000  9.33738  1.486990 -0.177597 -0.002132"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=pd.read_csv(\"demo.csv\", header=None) \n",
+    "df.columns = [\"ax\", \"ay\", \"az\", \"gx\", \"gy\", \"gz\"] #as there are no keys in the file add them\n",
+    "df.head() #show the top of the file"
    ]
   },
   {
@@ -60,8 +175,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   },
   "orig_nbformat": 4
  },
