--- a/MachineLearning/reader.ipynb
+++ b/MachineLearning/reader.ipynb
@@ -185,7 +185,7 @@
    "metadata": {},
    "source": [
     "### Preparing your data and labelling it\n",
-    "To use this data we will need to know what class each it is"
+    "To use this data we will need to know what class each csv file is. "
    ]
   },
   {
