--- a/MachineLearning/reader.ipynb
+++ b/MachineLearning/reader.ipynb
@@ -498,6 +498,22 @@
     "disp.plot()\n",
     "plt.show()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Challenge tasks\n",
+    "Now we have converted your dataset and trained classifiers, can you improve the accuracy of your models? \n",
+    "THings to look into\n",
+    "- Signal processing of your data\n",
+    "- Model hyperparameters (number of epochs)\n",
+    "- Are there parts of your dataset that are noisy and outlier \n",
+    "- Look into PCA to make your data better https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html \n",
+    "\n",
+    "This is an independent task for you to push your research and study knowledge! "
+   ]
   }
  ],
  "metadata": {
